[package]
name = "heph"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["gen/proto", "crates/e2e", "crates/testkit", "crates/plugingo-e2e", "crates/htspec-derive", "crates/heph-core", "crates/heph-walk", "crates/heph-proc", "crates/heph-model", "crates/heph-sandboxfuse", "crates/heph-plugin", "crates/heph-builtins", "crates/heph-plugin-buildfile", "crates/heph-driver-support", "crates/heph-plugin-exec", "crates/heph-plugin-nix", "crates/heph-plugin-query", "crates/heph-plugin-go", "crates/heph-telemetry", "crates/heph-tui", "crates/heph-lock", "crates/heph-engine"]

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

[workspace.lints.clippy]
# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
# Optional - see post for caveats
# expect_used = "warn"
# arithmetic_side_effects = "warn"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"  # only relevant on editions before 2024
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
# Optional - these effectively force you to document numeric invariants
# cast_possible_wrap = "warn"
# cast_precision_loss = "warn"
# cast_possible_truncation = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
borsh = { version = "1.5.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
heph-proto-gen = { path = "gen/proto", features = ["proto_full"] }
heph-core = { path = "crates/heph-core" }
heph-walk = { path = "crates/heph-walk" }
heph-proc = { path = "crates/heph-proc" }
heph-model = { path = "crates/heph-model" }
heph-sandboxfuse = { path = "crates/heph-sandboxfuse", default-features = false }
heph-plugin = { path = "crates/heph-plugin" }
heph-builtins = { path = "crates/heph-builtins" }
heph-plugin-buildfile = { path = "crates/heph-plugin-buildfile" }
heph-driver-support = { path = "crates/heph-driver-support" }
heph-plugin-exec = { path = "crates/heph-plugin-exec" }
heph-plugin-nix = { path = "crates/heph-plugin-nix" }
heph-plugin-query = { path = "crates/heph-plugin-query" }
heph-plugin-go = { path = "crates/heph-plugin-go" }
heph-telemetry = { path = "crates/heph-telemetry" }
heph-tui = { path = "crates/heph-tui" }
heph-lock = { path = "crates/heph-lock" }
heph-engine = { path = "crates/heph-engine" }
htspec-derive = { path = "crates/htspec-derive" }
nom = { version = "7", default-features = false, features = ["std"] }
anyhow = "1.0.102"
memoize = "0.6.0"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "io-util", "io-std", "process", "macros", "sync", "signal", "fs", "test-util", "tracing", "net"] }
pprof = { version = "0.13", features = ["prost-codec"] }
futures = "0.3.32"
async-trait = "0.1.86"
async-recursion = "1"
stacker = "0.1"
async-stream = "0.3"
smart-default = "0.7.1"
humantime = "2.3.0"
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
rayon = "1.12.0"
xxhash-rust = { version = "0.8.15" , features = ["xxh3", "std"]}
itertools = "0.13.0"
tar = "0.4"
glob = "0.3"
wax = "0.7"
walkdir = "2"
xattr = "1"
similar = "2"
tempfile = "3.10"
thiserror = "1.0.69"
derivative = "2.2.0"
enclose = "1"
which = "8.0.2"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
parking_lot = "0.12"
rustc-hash = "2"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "macros", "scrolling-regions"] }
ansi-to-tui = "8"
unicode-width = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
libc = "0.2"
minijinja = "2"
erased-serde = "0.4"
crossbeam-channel = "0.5"
quick_cache = "0.6"
indexmap = "2"
posthog-rs = "0.10.0"
uuid = { version = "1.23.3", features = ["v4"] }
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure", "http", "tokio"] }
url = "2.5.8"
flate2 = "1.1.9"

[features]
# FUSE sandbox is on by default. The FUSE machinery (and its `fuser`/libfuse
# link) lives in `heph-sandboxfuse`; this just forwards the feature. Linux links
# nothing (pure-Rust); macOS links macFUSE. `support_check` probes at runtime
# and falls back to the copy path when FUSE is unavailable, so a default build
# is safe on hosts without it. The `-weak-lfuse` link arg is emitted by this
# crate's build.rs (the final binary link).
default = ["fuse-sandbox"]
fuse-sandbox = ["heph-sandboxfuse/fuse-sandbox"]

[dev-dependencies]
serde-jsonlines = "0.7.0"
tempfile = "3"

