[package]
name = "heph"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["gen/proto", "crates/e2e", "crates/testkit", "crates/plugingo-e2e", "crates/htspec-derive", "crates/core", "crates/walk", "crates/proc", "crates/model", "crates/sandboxfuse", "crates/plugin", "crates/plugin-abi", "crates/plugin-sdk", "crates/plugin-remote", "crates/plugin-stabby", "crates/plugin-go-cdylib", "crates/plugin-echo", "crates/builtins", "crates/plugin-buildfile", "crates/driver-support", "crates/plugin-exec", "crates/plugin-nix", "crates/plugin-query", "crates/plugin-go", "crates/telemetry", "crates/tui", "crates/lock", "crates/engine"]
# wasm guest components are built with cargo-component for wasm32-wasip2, not by
# the host `cargo build --workspace`; keep them out of the workspace.
exclude = ["crates/wasm-guests"]

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.release]
# Thin LTO keeps cross-crate inlining but links in parallel (fat `lto = true`
# is a single-threaded whole-program pass that dominated wall time and erased
# the benefit of the crate split). codegen-units > 1 restores parallel codegen.
# Runtime perf stays within noise of fat LTO.
codegen-units = 16
lto = "thin"
opt-level = 3 # Prioritizes speed.
strip = true # Ensures debug symbols are removed.

[workspace.lints.clippy]
# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
# Optional - see post for caveats
# expect_used = "warn"
# arithmetic_side_effects = "warn"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"  # only relevant on editions before 2024
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
# Optional - these effectively force you to document numeric invariants
# cast_possible_wrap = "warn"
# cast_precision_loss = "warn"
# cast_possible_truncation = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
borsh = { version = "1.6.1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
hproto-gen = { package = "proto-gen", path = "gen/proto", features = ["proto_full"] }
hcore = { package = "core", path = "crates/core" }
hwalk = { package = "walk", path = "crates/walk" }
hproc = { package = "proc", path = "crates/proc" }
hmodel = { package = "model", path = "crates/model" }
hsandboxfuse = { package = "sandboxfuse", path = "crates/sandboxfuse", default-features = false }
hplugin = { package = "plugin", path = "crates/plugin" }
hbuiltins = { package = "builtins", path = "crates/builtins" }
hplugin-buildfile = { package = "plugin-buildfile", path = "crates/plugin-buildfile" }
hdriver-support = { package = "driver-support", path = "crates/driver-support" }
hplugin-exec = { package = "plugin-exec", path = "crates/plugin-exec" }
hplugin-nix = { package = "plugin-nix", path = "crates/plugin-nix" }
hplugin-query = { package = "plugin-query", path = "crates/plugin-query" }
hplugin-go = { package = "plugin-go", path = "crates/plugin-go" }
hplugin-remote = { package = "plugin-remote", path = "crates/plugin-remote" }
hplugin-stabby = { package = "plugin-stabby", path = "crates/plugin-stabby", features = ["host", "guest"] }
htelemetry = { package = "telemetry", path = "crates/telemetry" }
htui = { package = "tui", path = "crates/tui" }
hlock = { package = "lock", path = "crates/lock" }
hengine = { package = "engine", path = "crates/engine" }
htspec-derive = { path = "crates/htspec-derive" }
nom = { version = "8", default-features = false, features = ["std"] }
anyhow = "1.0.102"
memoize = "0.6.0"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "io-util", "io-std", "process", "macros", "sync", "signal", "fs", "test-util", "tracing", "net"] }
pprof = { version = "0.15", features = ["prost-codec"] }
futures = "0.3.32"
async-trait = "0.1.89"
async-recursion = "1"
stacker = "0.1"
async-stream = "0.3"
smart-default = "0.7.1"
humantime = "2.3.0"
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
rayon = "1.12.0"
xxhash-rust = { version = "0.8.15" , features = ["xxh3", "std"]}
itertools = "0.14.0"
tar = "0.4"
glob = "0.3"
wax = "0.7"
walkdir = "2"
xattr = "1"
similar = "3"
tempfile = "3.27"
thiserror = "2.0.18"
derivative = "2.2.0"
enclose = "1"
which = "8.0.3"
rusqlite = { version = "0.39", features = ["bundled", "blob"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"
parking_lot = "0.12"
rustc-hash = "2"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "macros", "scrolling-regions"] }
ansi-to-tui = "8"
unicode-width = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
libc = "0.2"
minijinja = "2"
erased-serde = "0.4"
crossbeam-channel = "0.5"
quick_cache = "0.6"
indexmap = "2"
posthog-rs = "0.12.0"
uuid = { version = "1.23.3", features = ["v4"] }
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure", "http", "tokio"] }
url = "2.5.8"
flate2 = "1.1.9"
# Blocking HTTP client, used only to download `bin: { url }` plugins. rustls-tls
# avoids a system OpenSSL link; blocking runs on its own thread so it is safe to
# call from inside the async runtime (see bootstrap::download_plugin).
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }

[features]
# FUSE sandbox is on by default. The FUSE machinery (and its `fuser`/libfuse
# link) lives in `heph-sandboxfuse`; this just forwards the feature. Linux links
# nothing (pure-Rust); macOS links macFUSE. `support_check` probes at runtime
# and falls back to the copy path when FUSE is unavailable, so a default build
# is safe on hosts without it. The `-weak-lfuse` link arg is emitted by this
# crate's build.rs (the final binary link).
default = ["fuse-sandbox"]
fuse-sandbox = ["hsandboxfuse/fuse-sandbox"]
# Out-of-process plugin shm tier (iceoryx2 byte-pipe under the Mux). Opt-in.
shm = ["hplugin-remote/shm"]
# In-process wasm-component plugins (`wasm:` config), via wasmtime. Opt-in.
wasm = ["hplugin-remote/wasm"]

[dev-dependencies]
serde-jsonlines = "0.7.0"
tempfile = "3"

# Fork exposing `event::raw_input` (EventSource/UnixInternalEventSource/
# InternalEvent) so the TUI can own a single tty reader and demux cursor-position
# replies from key events — see crates/tui/src/tui/input.rs. Avoids the
# DSR-query / EventStream two-reader race.
[patch.crates-io]
crossterm = { git = "https://github.com/hephbuild/crossterm.git", branch = "fixstderr" }

