[package]
name = "htspec-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# This crate only emits tokens that reference `crate::htspec` / `crate::htvalue`
# / `crate::engine::driver` in the *consuming* crate (heph), so it has no
# workspace-lint or runtime dependency of its own.
