[package]
name = "driver-support"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hcore = { package = "core", path = "../core" }
hmodel = { package = "model", path = "../model" }
hplugin = { package = "plugin", path = "../plugin" }
hsandboxfuse = { package = "sandboxfuse", path = "../sandboxfuse", default-features = false }
anyhow = "1.0.102"
async-trait = "0.1.86"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
glob = "0.3"
walkdir = "2"
rayon = "1.12.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "std"] }
tokio = { version = "1.50.0", features = ["rt", "io-util", "fs", "process"] }

[dev-dependencies]
tempfile = "3"
