[package]
name = "e2e"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dev-dependencies]
heph = { path = "../.." }
htestkit = { package = "testkit", path = "../testkit" }
plugin-remote = { path = "../plugin-remote" }
plugin-sdk = { path = "../plugin-sdk" }
hplugin = { package = "plugin", path = "../plugin" }
hmodel = { package = "model", path = "../model" }
hcore = { package = "core", path = "../core" }
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
anyhow = "1"
tempfile = "3"
