[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hcore = { package = "core", path = "../core" }
hmodel = { package = "model", path = "../model" }
hwalk = { package = "walk", path = "../walk" }
hproc = { package = "proc", path = "../proc" }
hlock = { package = "lock", path = "../lock" }
hsandboxfuse = { package = "sandboxfuse", path = "../sandboxfuse", default-features = false }
hplugin = { package = "plugin", path = "../plugin" }
hdriver-support = { package = "driver-support", path = "../driver-support" }
hbuiltins = { package = "builtins", path = "../builtins" }
hplugin-exec = { package = "plugin-exec", path = "../plugin-exec" }
hplugin-query = { package = "plugin-query", path = "../plugin-query" }
hplugin-stabby = { package = "plugin-stabby", path = "../plugin-stabby", features = ["host"] }
hplugin-abi = { package = "plugin-abi", path = "../plugin-abi", features = ["convert"] }
htelemetry = { package = "telemetry", path = "../telemetry" }
anyhow = "1.0.102"
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1.89"
borsh = { version = "1.6.1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
enclose = "1"
flate2 = "1.1.9"
futures = "0.3.32"
glob = "0.3"
indexmap = "2"
memoize = "0.6.0"
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure", "http", "tokio"] }
parking_lot = "0.12"
quick_cache = "0.6"
r2d2 = "0.8"
r2d2_sqlite = "0.34"
rayon = "1.12.0"
# Blocking HTTP client, used only to download `url:` plugin manifests/cdylibs.
# rustls-tls avoids a system OpenSSL link; blocking runs on its own thread so it
# is safe to call from inside the async runtime (see plugin_load::download_plugin).
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
rusqlite = { version = "0.39", features = ["bundled", "blob"] }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "3"
smart-default = "0.7.1"
stacker = "0.1"
tar = "0.4"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "io-util", "io-std", "process", "macros", "sync", "signal", "fs", "test-util", "tracing", "net"] }
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
tracing = "0.1"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4"] }
wax = "0.7"
which = "8.0.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "std"] }
thiserror = "2.0.18"
libc = "0.2"
xattr = "1"
tempfile = "3.27"
derivative = "2.2.0"
humantime = "2.3.0"

[dev-dependencies]
hplugin-buildfile = { package = "plugin-buildfile", path = "../plugin-buildfile" }
serde-jsonlines = "0.7.0"
tempfile = "3"
