[package]
name = "heph-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
tar = "0.4"
futures = "0.3.32"
enclose = "1"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "std"] }
rustc-hash = "2"
libc = "0.2"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "test-util"] }

[dev-dependencies]
tempfile = "3"
