[package]
name = "heph-engine"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
heph-core = { path = "../heph-core" }
heph-model = { path = "../heph-model" }
heph-walk = { path = "../heph-walk" }
heph-proc = { path = "../heph-proc" }
heph-lock = { path = "../heph-lock" }
heph-sandboxfuse = { path = "../heph-sandboxfuse", default-features = false }
heph-plugin = { path = "../heph-plugin" }
heph-driver-support = { path = "../heph-driver-support" }
heph-builtins = { path = "../heph-builtins" }
heph-plugin-exec = { path = "../heph-plugin-exec" }
heph-plugin-query = { path = "../heph-plugin-query" }
heph-telemetry = { path = "../heph-telemetry" }
anyhow = "1.0.102"
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1.86"
borsh = { version = "1.5.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
enclose = "1"
flate2 = "1.1.9"
futures = "0.3.32"
glob = "0.3"
indexmap = "2"
memoize = "0.6.0"
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure", "http", "tokio"] }
parking_lot = "0.12"
quick_cache = "0.6"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rayon = "1.12.0"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "2"
smart-default = "0.7.1"
stacker = "0.1"
tar = "0.4"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "io-util", "io-std", "process", "macros", "sync", "signal", "fs", "test-util", "tracing", "net"] }
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
tracing = "0.1"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4"] }
wax = "0.7"
which = "8.0.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "std"] }
thiserror = "1.0.69"
libc = "0.2"
xattr = "1"
tempfile = "3.10"
derivative = "2.2.0"
humantime = "2.3.0"

[dev-dependencies]
heph-plugin-buildfile = { path = "../heph-plugin-buildfile" }
serde-jsonlines = "0.7.0"
tempfile = "3"
