[package]
name = "heph-plugin-go"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
heph-core = { path = "../heph-core" }
heph-model = { path = "../heph-model" }
heph-walk = { path = "../heph-walk" }
heph-proc = { path = "../heph-proc" }
heph-plugin = { path = "../heph-plugin" }
heph-builtins = { path = "../heph-builtins" }
heph-driver-support = { path = "../heph-driver-support" }
heph-plugin-exec = { path = "../heph-plugin-exec" }
heph-plugin-query = { path = "../heph-plugin-query" }
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.86"
async-recursion = "1"
futures = "0.3.32"
enclose = "1"
parking_lot = "0.12"
borsh = { version = "1.5.7", features = ["derive"] }
glob = "0.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "std"] }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "io-util", "process", "macros", "sync", "fs"] }

[dev-dependencies]
tempfile = "3"
