[package]
name = "heph-plugin"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
heph-core = { path = "../heph-core" }
heph-model = { path = "../heph-model" }
heph-walk = { path = "../heph-walk" }
heph-sandboxfuse = { path = "../heph-sandboxfuse", default-features = false }
htspec-derive = { path = "../../htspec-derive" }
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.86"
erased-serde = "0.4"
smart-default = "0.7.1"
itertools = "0.13.0"
futures = "0.3.32"
tokio = { version = "1.50.0", features = ["io-util"] }

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
