[package]
name = "heph-proc"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
heph-core = { path = "../heph-core" }
anyhow = "1.0.102"
libc = "0.2"
tracing = "0.1"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "io-util", "process", "macros", "sync", "time", "test-util"] }

[dev-dependencies]
tempfile = "3"
