[package]
name = "heph-sandboxfuse"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
heph-core = { path = "../heph-core" }
anyhow = "1.0.102"
libc = "0.2"
tar = "0.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Linux uses fuser's pure-Rust backend (no `libfuse` feature): mounting shells
# out to `fusermount3` at runtime, so there is NO build-time/link-time libfuse
# dependency. That lets the cross-compiled (zigbuild) arm64 release binary link
# cleanly — there is no C library to find for the target arch.
[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.17", optional = true }

# macOS has no pure-Rust mount path, so it must link libfuse (macFUSE). The
# shipped macOS binary dynamically links libosxfuse and therefore requires
# macFUSE installed at runtime to launch — unless the final binary is linked
# with `-weak-lfuse` (see build.rs), which every binary-producing crate emits.
[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.17", optional = true, features = ["libfuse"] }

[features]
# FUSE sandbox is on by default. Linux links nothing (pure-Rust); macOS links
# macFUSE. `support_check` probes at runtime and falls back to the copy path
# when FUSE is unavailable, so a default build is safe on hosts without it.
default = ["fuse-sandbox"]
fuse-sandbox = ["dep:fuser"]

[dev-dependencies]
tempfile = "3"
