[package]
name = "plugin-abi"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hproto-gen = { package = "proto-gen", path = "../../gen/proto", features = ["proto_full"] }
anyhow = "1.0.102"
rkyv = "0.8"
# convert feature: conversions between pb wire types and the in-process
# hplugin/hmodel/hcore types. Optional so the bare wire crate stays light.
hplugin = { package = "plugin", path = "../plugin", optional = true }
hmodel = { package = "model", path = "../model", optional = true }
hcore = { package = "core", path = "../core", optional = true }
serde_json = { version = "1.0", optional = true }
# transport feature: generic length-prefixed Frame framing + bidirectional mux
# over any AsyncRead/AsyncWrite. Shared by the host adapter and the guest SDK.
prost = { version = "0.14", optional = true }
tokio = { version = "1.52", features = ["io-util", "rt", "sync", "macros"], optional = true }
async-trait = { version = "0.1.89", optional = true }
tracing = { version = "0.1", optional = true }
# shm tier (iceoryx2 byte-pipe under the existing Mux)
iceoryx2 = { version = "0.9", optional = true }

[features]
convert = ["dep:hplugin", "dep:hmodel", "dep:hcore", "dep:serde_json"]
transport = ["dep:prost", "dep:tokio", "dep:async-trait", "dep:tracing"]
shm = ["transport", "dep:iceoryx2"]

[dev-dependencies]
rkyv = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
