[package]
name = "plugin-abi"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hproto-gen = { package = "proto-gen", path = "../../gen/proto", features = ["proto_full"] }
anyhow = "1.0.102"
# convert feature: conversions between pb wire types and the in-process
# hplugin/hmodel/hcore types. Optional so the bare wire crate stays light.
hplugin = { package = "plugin", path = "../plugin", optional = true }
hmodel = { package = "model", path = "../model", optional = true }
hcore = { package = "core", path = "../core", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
prost = { version = "0.14", optional = true }

[features]
convert = ["dep:hplugin", "dep:hmodel", "dep:hcore", "dep:serde_json", "dep:serde_yaml", "dep:prost"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
